--- a/src/components/NavLink.astro
+++ b/src/components/NavLink.astro
@@ -4,6 +4,6 @@ const { currentPage, title, href } = Astro.props;
 
 <a
     href={href}
-    class={`${currentPage === title ? "bg-black text-white" : ""} px-1 rounded-sm`}
+    class={`${currentPage === title ? "text-ayu-accent font-bold" : ""}`}
     >{title}</a
 >
