--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { currentPage } = Astro.props;
     </head>
     <body>
         <Header currentPage={currentPage} />
-        <div class="p-2">
+        <div class="px-4 py-2">
             <slot />
         </div>
     </body>
