--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap");
+
 @import "tailwindcss";
 
 :root {
@@ -82,7 +84,9 @@
 body {
     background-color: var(--ayu-bg);
     color: var(--ayu-fg);
-    font-family: "mono";
+    font-family: "Fira Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .bg-ayu-bg {
