removed explicit birth date

--- a/src/components/TimeAlive.astro
+++ b/src/components/TimeAlive.astro
@@ -17,7 +17,7 @@
 
         const element = document.getElementById("time-alive");
         if (element) {
-            element.innerText = `${years}y or ${milliseconds}ms (${birthDate.toDateString()})`;
+            element.innerText = `${years}y or ${milliseconds}ms`;
         }
     }
 
