--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import TimeAlive from "../components/TimeAlive.astro";
+import TimeSince from "../components/TimeSince.astro";
 ---
 
 <Layout currentPage="about">
-    <h1 class="text-md">about page</h1>
-    AGE: <TimeAlive client:react />
+    <div class="text-md">
+        <p>AGE: <TimeSince date={new Date("2004-11-04")} client:react /></p>
+    </div>
 </Layout>
