--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,17 +68,19 @@ const projects: ProjectMetadata[] = Object.values(
 ---
 
 <Layout currentPage="home">
-    <h1 class="text-md mb-4">projects</h1>
+    <!-- <h1 class="text-md mb-4">projects:</h1> -->
 
-    {
-        projects.map((project) => (
-            <ProjectListItem
-                title={project.title}
-                description={project.description}
-                date={project.date}
-                image={project.image}
-                slug={project.slug}
-            />
-        ))
-    }
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
+        {
+            projects.map((project) => (
+                <ProjectListItem
+                    title={project.title}
+                    description={project.description}
+                    date={project.date}
+                    image={project.image}
+                    slug={project.slug}
+                />
+            ))
+        }
+    </div>
 </Layout>
