--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const projects: ProjectMetadata[] = Object.values(
 ---
 
 <Layout currentPage="home">
-    <!-- <h1 class="text-md mb-4">projects:</h1> -->
+    <!-- <h1 class="text-2xl font-medium mb-4">projects:</h1> -->
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
         {
