--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -2,12 +2,12 @@
 import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
-    title: "wiskatron",
+    title: "Wiskatron",
     description: "Spotify listening activity with dynamic visuals",
     date: "February 2024",
     slug: "wiskatron",
-    // image: null,
     image: "/wiskatron-icon.svg",
+    url: "https://wiskatron.oliverbryan.com",
     hidden: false,
 };
 ---
