--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { currentPage } = Astro.props;
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>ob - {currentPage}</title>
+        <title>ob - {currentPage.title}</title>
     </head>
     <body>
         <Header currentPage={currentPage} />
