--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import NavLink from "./NavLink.astro";
 const { currentPage } = Astro.props;
 
 const pages = [
-    { title: "Home", path: "/" },
-    { title: "About", path: "/about" },
+    { title: "home", path: "/" },
+    { title: "about", path: "/about" },
 ];
 ---
 
