--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -9,6 +9,7 @@ export const metadata = {
     slug: "glimpse",
     image: "/glimpse-icon.svg",
     url: "https://glimpse.ob248.com",
+    github: "https://github.com/hex248/glimpse",
     hidden: false,
 };
 ---
