--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -8,6 +8,7 @@ export const metadata = {
     slug: "wiskatron",
     image: "/wiskatron-icon.svg",
     url: "https://wiskatron.oliverbryan.com",
+    github: "https://github.com/hex248/wiskatron",
     hidden: false,
 };
 ---
