--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,8 @@ const pages = [
 </style>
 
 <header class="">
-    <div class="w-full flex gap-4 px-4 py-2 border-b-1 border-ayu-gutter">
+    <div class="w-full flex items-center gap-3 px-4 py-2 border-b-1 border-ayu-gutter">
+        <img src="/favicon.svg" alt="oliver bryan icon" class="h-6 w-6" />
         <h1 class="text-2xl text-ayu-red-500">oliver bryan</h1>
     </div>
     <div
