my name instead of project/* in footer

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -101,7 +101,7 @@ const { metadata } = Astro.props;
         <slot />
 
         <p class="text-center text-md text-ayu-gutter mt-8 mb-4">
-            projects/{metadata.slug} - {metadata.date}
+            Oliver Bryan - {metadata.date}
             {
                 metadata.github && (
                     <>
