demo-border css

--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -58,28 +58,32 @@ export const metadata = {
             <img
                 src="/images/glimpse/feed.png"
                 alt="Feed view"
-                class="w-full h-full object-cover rounded"
+                class="w-full h-full object-cover demo-border"
             />
             <img
                 src="/images/glimpse/crop.png"
                 alt="Composer + cropping"
-                class="w-full h-full object-cover rounded"
-            /><img
+                class="w-full h-full object-cover demo-border"
+            />
+            <img
                 src="/images/glimpse/profile.png"
                 alt="Profile (custom colours)"
-                class="w-full h-full object-cover rounded"
-            /><img
+                class="w-full h-full object-cover demo-border"
+            />
+            <img
                 src="/images/glimpse/settings.png"
                 alt="Settings"
-                class="w-full h-full object-cover rounded"
-            /><img
+                class="w-full h-full object-cover demo-border"
+            />
+            <img
                 src="/images/glimpse/comments.png"
                 alt="Comments & interactions"
-                class="w-full h-full object-cover rounded"
-            /><img
+                class="w-full h-full object-cover demo-border"
+            />
+            <img
                 src="/images/glimpse/search.png"
                 alt="User search/discovery"
-                class="w-full h-full object-cover rounded"
+                class="w-full h-full object-cover demo-border"
             />
         </div>
     </div>
