hidden incomplete pages

--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -8,7 +8,7 @@ export const metadata = {
     date: "January - June 2024",
     slug: "mizu",
     image: "/mizu-icon.svg",
-    hidden: false,
+    hidden: true,
 };
 ---
 
