--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -9,7 +9,7 @@ export const metadata = {
     image: "/wiskatron-icon.svg",
     url: "https://wiskatron.oliverbryan.com",
     github: "https://github.com/hex248/wiskatron",
-    hidden: false,
+    hidden: true,
 };
 ---
 
