--- a/src/components/ProjectListItem.astro
+++ b/src/components/ProjectListItem.astro
@@ -60,7 +60,7 @@ const {
             }
         </div>
         <div class="flex flex-col gap-2">
-            <h3 class="project-title text-lg -mb-2 -mt-1">
+            <h3 class="project-title text-lg font-500 -mb-2 -mt-1">
                 {title}
             </h3>
             <p class="project-description text-sm">
